--- a/hosts.yaml
+++ b/hosts.yaml
@@ -5,3 +5,7 @@ all:
       ansible_port: 22
       ansible_user: root
       ansible_ssh_pass: 612284
+      vars:
+        hostname: dev
+        locale: ru_RU.utf8
+        set_timezone: Europe/Moscow
