Access to host vars

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -8,4 +8,4 @@ all:
       vars:
         hostname: dev
         locale: ru_RU.utf8
-        set_timezone: Europe/Moscow
+        timezone: Europe/Moscow
