End play if nothing change

--- a/roles/hostname/tasks/main.yaml
+++ b/roles/hostname/tasks/main.yaml
@@ -1,9 +1,14 @@
-- name: Get new hostname
-  set_fact: new_hostname={{hostvars[inventory_hostname].vars.hostname}}
+# - name: Get new hostname
+#   set_fact: new_hostname={{hostvars[inventory_hostname].vars.hostname}}
 
-- name: Get current hostname
+- name: Set hostname
   command: hostname
   register: old_hostname
 
-- name: Output hostname
-  debug: msg="{{old_hostname.stdout}}, {{inventory_hostname}}, {{new_hostname}}"
+- meta: end_play
+  when: old_hostname.stdout == hostvars[inventory_hostname].vars.hostname
+
+- debug: 
+    msg: Change hostname from '{{old_hostname.stdout}}' to '{{hostvars[inventory_hostname].vars.hostname}}'
+
+- command: hostnamectl set-hostname {{hostvars[inventory_hostname].vars.hostname}}
