--- a/hosts/group_vars/devserver.yaml
+++ b/hosts/group_vars/devserver.yaml
@@ -1,5 +1,10 @@
 ---
 ds_hostname: devserver
+ds_locale: 
+  name: 'ru_RU.UTF-8'
+  grep_pattern: 'ru_ru\.utf-?8'
+  re_pattern: '(?i)ru_ru\.utf-?8'
 ds_timezone: Europe/Moscow
-ds_locale: ru_RU.utf8
+
+
 ...
