--- a/roles/setlocale/tasks/locale-gen.yaml
+++ b/roles/setlocale/tasks/locale-gen.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Enabling locale {{ ds_locale.name }}
+- name: Enabling locale {{ settings.locale.name }}
   replace:
     path: /etc/locale.gen
-    regexp: '^#\s*({{ ds_locale.re_pattern }}.*)$'
+    regexp: '^#\s*({{ settings.locale.re_pattern }}.*)$'
     replace: '\1'
     backup: yes
 
@@ -10,7 +10,7 @@
   shell: locale-gen
 
 - name: Get new locale
-  shell: localectl list-locales | grep -i -E '{{ ds_locale.grep_pattern }}'
+  shell: localectl list-locales | grep -i -E '{{ settings.locale.grep_pattern }}'
   register: ds_new_locale
 
 - name: Set locale {{ ds_new_locale.stdout }}
