--- a/hosts/group_vars/devserver.yaml
+++ b/hosts/group_vars/devserver.yaml
@@ -1,8 +1,9 @@
 ---
-ds_hostname: devserver
-ds_locale: 
-  name: 'ru_RU.UTF-8'
-  grep_pattern: 'ru_ru\.utf-?8'
-  re_pattern: '(?i)ru_ru\.utf-?8'
-ds_timezone: Europe/Moscow
+settings:
+  hostname: devserver
+  locale: 
+    name: 'ru_RU.UTF-8'
+    grep_pattern: 'ru_ru\.utf-?8'
+    re_pattern: '(?i)ru_ru\.utf-?8'
+  timezone: Europe/Moscow
 ...
