--- a/roles/setlocale/tasks/main.yaml
+++ b/roles/setlocale/tasks/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get locales
-  shell: localectl list-locales | grep -i -E '{{ ds_locale.grep_pattern }}'
+  shell: localectl list-locales | grep -i -E '{{ settings.locale.grep_pattern }}'
   register: ds_locale_present
   ignore_errors: true
 
