Fix apache role

--- a/roles/apache/tasks/conf/charset.yaml
+++ b/roles/apache/tasks/conf/charset.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Disable charset.conf
   shell: a2disconf charset
-  ignore_errord: yes
+  ignore_errors: yes
 
 - name: Set charset.conf
   template: 
