--- a/roles/php/tasks/main.yaml
+++ b/roles/php/tasks/main.yaml
@@ -5,19 +5,5 @@
     - php
     - libapache2-mod-php
     - php-mysql
-
-# - name: Stop MySQL
-#   service:
-#     name: mysql
-#     state: stopped
-
-# - import_tasks: allow-network.yaml
-# - import_tasks: set-root-password.yaml
-
-# - name: Start MySQL
-#   service:
-#     name: mysql
-#     state: started
-
-# - import_tasks: network-user.yaml
+twork-user.yaml
 ...
