--- a/hosts/hosts.yaml
+++ b/hosts/hosts.yaml
@@ -7,4 +7,5 @@ all:
           ansible_host: 172.28.128.3
           ansible_port: 22
           ansible_user: root
-          ansible_ssh_pass: 612284
+          ansible_ssh_private_key_file: configs/vagrant-debian-root
+          
