--- a/roles/setlocale/tasks/main.yaml
+++ b/roles/setlocale/tasks/main.yaml
@@ -1,9 +1,11 @@
 ---
-- name: Get locales
-  shell: localectl list-locales | grep -i -E '{{ settings.locale.grep_pattern }}'
-  register: ds_locale_present
-  ignore_errors: true
+- name: Get current locale
+  shell: localectl status
+  register: _locale
 
-- import_tasks: locale-gen.yaml
-  when: ds_locale_present.stdout == ""
+- set_fact:
+    _is_locale: "{{ _locale.stdout | regex_search(gv_options.locale.pattern) }}"
+
+- import_tasks: setlocale.yaml
+  when: _is_locale == ""
 ...
