--- a/roles/apache/templates/sites/devserver.conf
+++ b/roles/apache/templates/sites/devserver.conf
@@ -1,7 +1,7 @@
 <VirtualHost {{ ansible_host }}:80>
-	ServerName devserver.dev
+	ServerName {{ hv_options.domain }}.dev
 
-	ServerAdmin webmaster@devserver.dev
+	ServerAdmin webmaster@{{ hv_options.domain }}
 	DocumentRoot /srv/devserver
 
 	<Directory /srv/devserver>
