--- a/roles/phpmyadmin/tasks/main.yaml
+++ b/roles/phpmyadmin/tasks/main.yaml
@@ -24,4 +24,11 @@
   service:
     name: apache2
     state: started
+
+- name: Add record to ./etc.hosts
+  block:
+    - local_action: lineinfile path=./etc.hosts line="{{ ansible_host }}\tphpmyadmin.{{ hv_options.domain }}"
+  rescue:
+    - local_action: copy content="{{ ansible_host }}\tphpmyadmin.{{ hv_options.domain }}" dest=./etc.hosts
+
 ...
