--- a/roles/phpmyadmin/templates/sites/phpmyadmin.conf
+++ b/roles/phpmyadmin/templates/sites/phpmyadmin.conf
@@ -1,5 +1,6 @@
 <VirtualHost {{ ansible_host }}:80>
-	ServerName phpmyadmin.{{ settings.hostname }}.dev
+
+	ServerName phpmyadmin.{{ hv_options.domain }}
 	DocumentRoot /usr/share/phpmyadmin
 
 	ErrorLog ${APACHE_LOG_DIR}/phpmyadmin-error.log
